fix(infra): upgrade App Engine instance class to F2 and configure JVM memory flags (#47)